# bwki2025-lowres-langid-backend

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  example_usage.py  fetch-health.sh  fly.toml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  start.sh
.github/workflows/: deploy.yml
app/: main.py  startup_models.py
app/api/v1/: rest_controller.py
app/api/v1/routes/: classify.py
app/api/v1/schemas/: classification_response.py  classify_request.py
app/core/: config.py  container.py  errors.py
app/domain/entities/: classification_result.py
app/repositories/: fasttext_expert_repository.py  writing_system_repository.py
app/services/: language_identification_service.py
http/: classify.http  health.http  http-client.env.json
tests/: test_api.py
tools/: download_models.py
